Fix edits - bg, mobile view.

--- a/src/pug/components/homepage/_main.pug
+++ b/src/pug/components/homepage/_main.pug
@@ -15,7 +15,7 @@ section#main.main
               .c-form__field.c-form__field--select
                 .c-form__select-wrap
                   select(name="" select-js)
-                    option(value="1")!= "Marka"
+                    option(value="1")!= "Pokażemy Ci co możemy z nim zrobić!"
                     option(value="1")!= "Marka"
                     option(value="1")!= "Marka"
                     option(value="1")!= "Marka"
@@ -25,7 +25,7 @@ section#main.main
               .c-form__field.c-form__field--select
                 .c-form__select-wrap
                   select(name="" select-js)
-                    option(value="1")!= "Model"
+                    option(value="1")!= "Pokażemy Ci co możemy z nim zrobić!"
                     option(value="1")!= "Model"
                     option(value="1")!= "Model"
                     option(value="1")!= "Model"
@@ -35,7 +35,7 @@ section#main.main
               .c-form__field.c-form__field--select
                 .c-form__select-wrap
                   select(name="" select-js)
-                    option(value="1")!= "Silnik"
+                    option(value="1")!= "Pokażemy Ci co możemy z nim zrobić!"
                     option(value="1")!= "Silnik"
                     option(value="1")!= "Silnik"
                     option(value="1")!= "Silnik"
