--- a/src/scss/_components/_notFound.scss
+++ b/src/scss/_components/_notFound.scss
@@ -7,15 +7,29 @@
   @include fluid(padding-bottom, 320px, 1920px, 100px, 200px);
 
   &__bg {
+    overflow: hidden;
     z-index: 0;
     position: absolute;
     top: 50px;
     left: 0;
     width: 100%;
     @include fluid(height, 320px, 1920px, 431px, 581px);
-    background-image: url('../img/img-bg.png');
     background-repeat: no-repeat;
     background-position: bottom center;
+    @include respond(wide-medium) {
+      background-image: url('../img/bg.svg');
+      background-size: cover;
+    }
+    @include respond(max-wide-small) {
+      background-image: url('../img/img-bg.png');
+    }
+    @include respond(max-small) {
+      top: 20px;
+      background-position-x: 40%;
+    }
+    @include respond(large) {
+      top: 60px;
+    }
   }
 
   .c-grid {
