--- a/src/scss/_components/homepage/_info.scss
+++ b/src/scss/_components/homepage/_info.scss
@@ -55,6 +55,7 @@
       display: flex;
       justify-content: space-between;
       @include respond(max-medium) {
+        flex-direction: column;
         flex-wrap: wrap;
       }
     }
