Create footer - w\ adaptive.

--- a/src/pug/404.pug
+++ b/src/pug/404.pug
@@ -6,7 +6,7 @@ contentClassName: not-found
 extends shared/_layout
 
 block content
-  div.body.body--start(class!= contentClassName)
+  div.body(class!= contentClassName)
 
     section#notFound.notFound
       .notFound__bg
