--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -7,7 +7,7 @@ dataPageName: index
 extends shared/_layout
 
 block content
-  div.body.body--start(class!= contentClassName)
+  div.body(class!= contentClassName)
 
     include components/homepage/_main
     include components/homepage/_info
