--- a/src/pug/utilities/_data.pug
+++ b/src/pug/utilities/_data.pug
@@ -44,7 +44,28 @@
         name: 'Kontakt'
       }
     ],
-    navFooter: [],
+    navFooter: [
+      {
+        href: '#',
+        name: 'Strona główna'
+      },
+      {
+        href: '#',
+        name: 'FAQ'
+      },
+      {
+        href: '#',
+        name: 'O nas'
+      },
+      {
+        href: '#',
+        name: 'Regulamin'
+      },
+      {
+        href: '#',
+        name: 'Kontakt'
+      }
+    ],
     social: []
   };
 
