--- a/src/pug/contacts.pug
+++ b/src/pug/contacts.pug
@@ -7,6 +7,6 @@ dataPageName: contacts
 extends shared/_layout
 
 block content
-  div.body.body--start(class!= contentClassName)
+  div.body(class!= contentClassName)
 
     include components/contacts/_contact
