--- a/src/scss/_components/contacts/_contacts.scss
+++ b/src/scss/_components/contacts/_contacts.scss
@@ -148,6 +148,11 @@
 
     &-0 {
       @include fluid(padding-bottom, 320px, 1920px, 23px, 64px);
+
+      .footer & {
+        padding-bottom: 0;
+        padding-right: 60px;
+      }
     }
 
     &-img {
@@ -160,10 +165,19 @@
         width: 36px;
       }
 
+      .footer & {
+        width: 90px;
+      }
+
       img {
         display: block;
         max-width: 100%;
         height: auto;
+
+        .footer & {
+          width: 64px;
+          height: 64px;
+        }
       }
     }
 
@@ -185,12 +199,22 @@
         font-weight: bold;
         @include fluid(font-size, 320px, 1920px, 18px, 30px);
         @include fluid(padding-bottom, 320px, 1920px, 12px, 20px);
+
+        .footer & {
+          color: #434c62;
+          @include fluid(font-size, 320px, 1920px, 16px, 24px);
+          @include fluid(padding-bottom, 320px, 1920px, 10px, 16px);
+        }
       }
 
       span {
         color: #d6273c;
         font-weight: 500;
         @include fluid(font-size, 320px, 1920px, 14px, 24px);
+
+        .footer & {
+          @include fluid(font-size, 320px, 1920px, 12px, 18px);
+        }
       }
     }
   }
