--- a/src/scss/_shared/_common.scss
+++ b/src/scss/_shared/_common.scss
@@ -27,6 +27,55 @@
 }
 // line :: end
 
+
+// social
+.social {
+  padding-left: 40px;
+  padding-right: 40px;
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__item {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+
+  &__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 38px;
+    height: 38px;
+    border-radius: 100%;
+    background-color: #434c62;
+    @include transition(opacity);
+
+    &:hover {
+      opacity: 0.9;
+      @include transition(opacity);
+    }
+  }
+}
+// social :: end
+
+
+// copyright
+.copyright {
+  display: flex;
+  align-items: center;
+
+  p {
+    color: #8d96ae;
+    font-size: 12px;
+    font-weight: 500;
+  }
+}
+// copyright :: end
+
+
 // form
 .c-form {
   &__group {
