--- a/src/pug/search.pug
+++ b/src/pug/search.pug
@@ -7,7 +7,7 @@ dataPageName: search
 extends shared/_layout
 
 block content
-  div.body(class!= contentClassName)
+  div.body.body--start(class!= contentClassName)
 
     include components/search/_base
     .line
