--- a/src/pug/utilities/_mixin/_nav.pug
+++ b/src/pug/utilities/_mixin/_nav.pug
@@ -22,7 +22,7 @@ mixin nav(classMod, arrData)
           )!= arrData[idx].name
         if(idx !== arrData.length - 1)
           li.nav__item-empty
-            span!= "&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;"
+            span!= "|"
 
 mixin navIconFont(classMod, arrData)
   nav.nav(class!= "nav--" + classMod)
