--- a/src/scss/_components/_notFound.scss
+++ b/src/scss/_components/_notFound.scss
@@ -3,8 +3,8 @@
 .notFound {
   overflow: hidden;
   position: relative;
+  @include fluid(min-height, 320px, 1920px, 431px, 640px);
   @include fluid(padding-top, 320px, 1920px, 50px, 147px);
-  @include fluid(padding-bottom, 320px, 1920px, 100px, 200px);
 
   &__bg {
     overflow: hidden;
