--- a/src/scss/_macros/_nav.scss
+++ b/src/scss/_macros/_nav.scss
@@ -64,6 +64,20 @@
       color: #8d96ae;
       font-size: 16px;
       font-weight: 500;
+      @include respond(max-small) {
+        font-size: 12px;
+      }
+
+      &-empty {
+        @include respond(medium) {
+          padding-left: 10px;
+          padding-right: 10px;
+        }
+        @include respond(max-small) {
+          padding-left: 5px;
+          padding-right: 5px;
+        }
+      }
     }
 
     .nav__link {
@@ -73,6 +87,9 @@
       color: #8d96ae;
       font-size: 16px;
       font-weight: 500;
+      @include respond(max-small) {
+        font-size: 12px;
+      }
     }
   }
 
