--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,7 +14,7 @@
 /// ===============
 @import "_generated/spritePNG";
 //@import "_generated/spriteSVG";
-//@import "_generated/spriteFont";
+@import "_generated/spriteFont";
 ///
 /// SHARED
 /// ===============
@@ -28,7 +28,7 @@
 //@import "_shared/objectFitImages";
 @import "_shared/iconPNG";
 //@import "_shared/iconSVG";
-//@import "_shared/iconFont";
+@import "_shared/iconFont";
 ///
 /// MACROS
 /// ===============
